--- a/you-say!/you-say!.xcodeproj/xcshareddata/xcschemes/you-say!.xcscheme
+++ b/you-say!/you-say!.xcodeproj/xcshareddata/xcschemes/you-say!.xcscheme
@@ -64,7 +64,7 @@
       <AdditionalOptions>
       </AdditionalOptions>
       <LocationScenarioReference
-         identifier = "Mexico City, Mexico"
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
          referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
